custom-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: custom-namespace
spec:
  finalizers: []
