fortune-pod-args-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-args-from-configmap
spec:
  containers:
    - name: html-generator
      image: luksa/fortune:args
      args:
        - "$(INTERVAL)" # supply the config map in the args instead of reading from the environment
