fortune-pod-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune30s
spec:
  containers:
    - name: html-generator
      image: luksa/fortune:env
